--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,7 +20,8 @@ classifiers = [
     "Topic :: Software Development :: Libraries :: Application Frameworks",
 ]
 dependencies = [
-    "fastapi>=0.109.0",
+    "fastapi>=0.115.0",
+    "starlette>=0.37.2",  # Required for httpx>=0.28.0 compatibility
     "uvicorn>=0.27.0",
     "pydantic>=2.5.0",
     "jinja2>=3.1.0",
