Fix Test Summary job permissions issue
Disable compare_to_earlier_commit in publish-unit-test-result-action
to avoid 403 errors when accessing commits on push events.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -141,6 +141,7 @@ jobs:
           files: test-results/**/*.xml
           comment_mode: always
           check_name: Test Results
+          compare_to_earlier_commit: false
 
   build:
     name: Build
