Add contents:read permission to Test Summary job
The publish-unit-test-result-action needs contents:read permission
to access commits for finding associated PRs to post comments.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -117,6 +117,7 @@ jobs:
     runs-on: ubuntu-latest
     if: always()
     permissions:
+      contents: read
       checks: write
       pull-requests: write
     steps:
