--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,6 +35,7 @@ dependencies = [
     "opentelemetry-sdk>=1.20.0",
     "opentelemetry-exporter-otlp>=1.20.0",
     "opentelemetry-exporter-prometheus>=0.45b0",
+    "redis>=5.0.0",  # Redis config store
 ]
 
 [project.optional-dependencies]
@@ -43,8 +44,22 @@ dev = [
     "pytest>=8.0.0",
     "pytest-asyncio>=0.23.0",
     "pytest-cov>=4.1.0",
+    "pytest-xdist>=3.0.0",
+    "pytest-timeout>=2.0.0",
     "ruff>=0.2.0",
     "mypy>=1.8.0",
+]
+# Property-based and fuzz testing
+test = [
+    "hypothesis>=6.100.0",
+    "schemathesis>=3.25.0",
+    "requests>=2.31.0",
+    "httpx>=0.27.0",
+]
+# Security testing
+security-test = [
+    "hypothesis>=6.100.0",
+    "bandit>=1.7.0",
 ]
 # Kafka tools - for kafka_publish, kafka_consume, etc.
 kafka = [
