fix(ci): use META_REPO_TOKEN for cross-repo dispatch
Reuse the org-level META_REPO_TOKEN instead of a separate
PLOSTON_REPO_TOKEN since both repos are public and use the
same org token.

--- a/.github/workflows/trigger-downstream.yml
+++ b/.github/workflows/trigger-downstream.yml
@@ -32,7 +32,7 @@ jobs:
       - name: Trigger ploston build-rc workflow
         uses: peter-evans/repository-dispatch@v2
         with:
-          token: ${{ secrets.PLOSTON_REPO_TOKEN }}
+          token: ${{ secrets.META_REPO_TOKEN }}
           repository: ostanlabs/ploston
           event-type: core-updated
           client-payload: |
