--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,7 +21,7 @@ classifiers = [
 ]
 dependencies = [
     "fastapi>=0.115.0",
-    "starlette>=0.37.2",  # Required for httpx>=0.28.0 compatibility
+    "starlette>=0.37.2", # Required for httpx>=0.28.0 compatibility
     "uvicorn>=0.27.0",
     "pydantic>=2.5.0",
     "jinja2>=3.1.0",
@@ -35,7 +35,8 @@ dependencies = [
     "opentelemetry-sdk>=1.20.0",
     "opentelemetry-exporter-otlp>=1.20.0",
     "opentelemetry-exporter-prometheus>=0.45b0",
-    "redis>=5.0.0",  # Redis config store
+    "redis>=5.0.0", # Redis config store
+    "fastmcp>=2.14.4",
 ]
 
 [project.optional-dependencies]
