feat: add native_tools module
Migrate native tools from agent/src/native_tools/core/ to ploston-core:
- filesystem.py: read_file_content, write_file_content, list_directory_content, delete_file_or_directory
- network.py: make_http_request, ping_host, dns_lookup, check_port
- data.py: validate_data_schema, transform_json_to_csv, transform_csv_to_json, transform_json_to_xml, transform_xml_to_json
- extraction.py: extract_text_content, extract_structured_data, extract_metadata
- kafka.py: publish_message_kafka, list_topics_kafka, create_topic_kafka, consume_messages_kafka, check_health_kafka
- ml.py: generate_text_embedding, calculate_text_similarity, classify_text, analyze_sentiment
- firecrawl.py: search_web_firecrawl, map_website_firecrawl, extract_data_firecrawl, check_health_firecrawl
- utils/docker.py: is_running_in_docker, resolve_host_for_docker, resolve_url_for_docker, resolve_kafka_servers_for_docker

Add optional dependencies:
- [tools]: all tool dependencies
- [kafka]: kafka-python for Kafka tools

This is part of the 4-package architecture migration where native tools
code lives in ploston-core and the MCP server wrapper lives in ploston.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,12 +38,21 @@ dependencies = [
 ]
 
 [project.optional-dependencies]
+# Development dependencies
 dev = [
     "pytest>=8.0.0",
     "pytest-asyncio>=0.23.0",
     "pytest-cov>=4.1.0",
     "ruff>=0.2.0",
     "mypy>=1.8.0",
+]
+# Kafka tools - for kafka_publish, kafka_consume, etc.
+kafka = [
+    "kafka-python>=2.0.0",
+]
+# All native tools dependencies (for Docker images)
+tools = [
+    "kafka-python>=2.0.0",
 ]
 
 [project.urls]
@@ -76,4 +85,3 @@ ignore = ["E501"]
 [tool.mypy]
 python_version = "3.12"
 strict = true
-
