--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -85,6 +85,16 @@ jobs:
   integration-tests:
     name: Integration Tests
     runs-on: ubuntu-latest
+    services:
+      redis:
+        image: redis:7-alpine
+        ports:
+          - 6379:6379
+        options: >-
+          --health-cmd "redis-cli ping"
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
     steps:
       - uses: actions/checkout@v4
 
@@ -98,11 +108,11 @@ jobs:
         run: uv sync --all-extras
 
       - name: Run integration tests
+        env:
+          REDIS_URL: redis://localhost:6379/0
         run: |
           uv run pytest tests/integration/ -v \
-            --junitxml=junit-integration.xml \
-            || echo "No integration tests found or tests skipped"
-        continue-on-error: true
+            --junitxml=junit-integration.xml
 
       - name: Upload integration test results
         uses: actions/upload-artifact@v4
@@ -110,7 +120,6 @@ jobs:
         with:
           name: integration-test-results
           path: junit-integration.xml
-          if-no-files-found: ignore
 
   test-summary:
     name: Test Summary
