feat(ci): add cascade to all 4 dependents and Slack notifications
- trigger-downstream.yml now triggers ploston, ploston-enterprise, ploston-cli, ploston-runner
- publish.yml triggers all 4 dependents on release with core-released event
- Added Slack notifications for release success/failure

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -77,6 +77,84 @@ jobs:
         with:
           repository-url: https://test.pypi.org/legacy/
 
+  trigger-downstream-releases:
+    name: Trigger Downstream Rebuilds
+    if: github.event_name == 'release'
+    needs: [publish-to-pypi]
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Trigger ploston rebuild
+        uses: peter-evans/repository-dispatch@v2
+        with:
+          token: ${{ secrets.META_REPO_TOKEN }}
+          repository: ostanlabs/ploston
+          event-type: core-released
+          client-payload: |
+            {
+              "core_version": "${{ github.event.release.tag_name }}",
+              "triggered_by": "ploston-core",
+              "trigger_type": "release",
+              "release_url": "${{ github.event.release.html_url }}"
+            }
+
+      - name: Trigger ploston-enterprise rebuild
+        uses: peter-evans/repository-dispatch@v2
+        with:
+          token: ${{ secrets.META_REPO_TOKEN }}
+          repository: ostanlabs/ploston-enterprise
+          event-type: core-released
+          client-payload: |
+            {
+              "core_version": "${{ github.event.release.tag_name }}",
+              "triggered_by": "ploston-core",
+              "trigger_type": "release",
+              "release_url": "${{ github.event.release.html_url }}"
+            }
+
+      - name: Trigger ploston-cli rebuild
+        uses: peter-evans/repository-dispatch@v2
+        with:
+          token: ${{ secrets.META_REPO_TOKEN }}
+          repository: ostanlabs/ploston-cli
+          event-type: core-released
+          client-payload: |
+            {
+              "core_version": "${{ github.event.release.tag_name }}",
+              "triggered_by": "ploston-core",
+              "trigger_type": "release",
+              "release_url": "${{ github.event.release.html_url }}"
+            }
+
+      - name: Trigger ploston-runner rebuild
+        uses: peter-evans/repository-dispatch@v2
+        with:
+          token: ${{ secrets.META_REPO_TOKEN }}
+          repository: ostanlabs/ploston-runner
+          event-type: core-released
+          client-payload: |
+            {
+              "core_version": "${{ github.event.release.tag_name }}",
+              "triggered_by": "ploston-core",
+              "trigger_type": "release",
+              "release_url": "${{ github.event.release.html_url }}"
+            }
+
+      - name: Notify meta-repo of release cascade
+        uses: peter-evans/repository-dispatch@v2
+        with:
+          token: ${{ secrets.META_REPO_TOKEN }}
+          repository: ostanlabs/agent-execution-layer
+          event-type: cascade-started
+          client-payload: |
+            {
+              "trigger_source": "ploston-core",
+              "trigger_type": "release",
+              "core_version": "${{ github.event.release.tag_name }}",
+              "expected_builds": ["ploston", "ploston-enterprise", "ploston-cli", "ploston-runner"],
+              "release_url": "${{ github.event.release.html_url }}"
+            }
+
   notify-dashboard:
     name: Notify Dashboard
     if: github.event_name == 'release'
@@ -97,4 +175,112 @@ jobs:
               "release_url": "${{ github.event.release.html_url }}",
               "run_id": "${{ github.run_id }}",
               "run_url": "${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}"
+            }
+
+  notify-slack:
+    name: Notify Slack
+    if: always() && github.event_name == 'release'
+    needs: [publish-to-pypi]
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Send success notification
+        if: needs.publish-to-pypi.result == 'success'
+        uses: slackapi/slack-github-action@v2.0.0
+        with:
+          webhook: ${{ secrets.SLACK_WEBHOOK_URL }}
+          webhook-type: incoming-webhook
+          payload: |
+            {
+              "text": "✅ Release Published: ploston-core ${{ github.event.release.tag_name }}",
+              "blocks": [
+                {
+                  "type": "header",
+                  "text": {
+                    "type": "plain_text",
+                    "text": "✅ Release Published: ploston-core"
+                  }
+                },
+                {
+                  "type": "section",
+                  "fields": [
+                    {
+                      "type": "mrkdwn",
+                      "text": "*Version:*\n${{ github.event.release.tag_name }}"
+                    },
+                    {
+                      "type": "mrkdwn",
+                      "text": "*PyPI:*\n<https://pypi.org/p/ploston-core|View on PyPI>"
+                    }
+                  ]
+                },
+                {
+                  "type": "context",
+                  "elements": [
+                    {
+                      "type": "mrkdwn",
+                      "text": "Downstream rebuilds triggered for: ploston, ploston-enterprise, ploston-cli, ploston-runner"
+                    }
+                  ]
+                },
+                {
+                  "type": "actions",
+                  "elements": [
+                    {
+                      "type": "button",
+                      "text": {
+                        "type": "plain_text",
+                        "text": "View Release"
+                      },
+                      "url": "${{ github.event.release.html_url }}"
+                    }
+                  ]
+                }
+              ]
+            }
+
+      - name: Send failure notification
+        if: needs.publish-to-pypi.result == 'failure'
+        uses: slackapi/slack-github-action@v2.0.0
+        with:
+          webhook: ${{ secrets.SLACK_WEBHOOK_URL }}
+          webhook-type: incoming-webhook
+          payload: |
+            {
+              "text": "❌ Release Failed: ploston-core ${{ github.event.release.tag_name }}",
+              "blocks": [
+                {
+                  "type": "header",
+                  "text": {
+                    "type": "plain_text",
+                    "text": "❌ Release Failed: ploston-core"
+                  }
+                },
+                {
+                  "type": "section",
+                  "fields": [
+                    {
+                      "type": "mrkdwn",
+                      "text": "*Version:*\n${{ github.event.release.tag_name }}"
+                    },
+                    {
+                      "type": "mrkdwn",
+                      "text": "*Author:*\n${{ github.actor }}"
+                    }
+                  ]
+                },
+                {
+                  "type": "actions",
+                  "elements": [
+                    {
+                      "type": "button",
+                      "text": {
+                        "type": "plain_text",
+                        "text": "View Run"
+                      },
+                      "url": "${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}"
+                    }
+                  ]
+                }
+              ]
             }
