ci: update trigger-downstream for hub-and-spoke model
Now triggers meta-repo directly instead of individual sub-repos.

--- a/.github/workflows/trigger-downstream.yml
+++ b/.github/workflows/trigger-downstream.yml
@@ -1,22 +1,15 @@
 # =============================================================================
-# Trigger Downstream Builds
+# Trigger Downstream Builds (Hub-and-Spoke Model)
 # =============================================================================
-# When ploston-core CI passes on main, trigger ALL 4 downstream repos to rebuild
-# with the new core version. This ensures changes to ploston-core are tested
-# in all dependent packages.
-#
-# Downstream packages:
-#   - ploston (Docker image)
-#   - ploston-enterprise (Docker image)
-#   - ploston-cli (PyPI package)
-#   - ploston-runner (PyPI package)
+# When ploston-core CI passes on main, trigger the meta-repo to rebuild ALL
+# dependent packages. The meta-repo handles the full CI pipeline.
 #
 # Flow:
 #   1. Push to ploston-core/main triggers CI
 #   2. CI passes → this workflow runs
-#   3. Triggers all 4 downstream repos with core_sha parameter
-#   4. Each downstream repo runs CI and reports to meta-repo
-#   5. Meta-repo waits for all 4 to complete, then runs integration tests
+#   3. Triggers meta-repo with core-updated event
+#   4. Meta-repo rebuilds ALL 4 dependents (ploston, enterprise, cli, runner)
+#   5. Meta-repo runs integration tests with all artifacts
 # =============================================================================
 
 name: Trigger Downstream
@@ -28,102 +21,33 @@ on:
     branches: [main]
 
 jobs:
-  trigger-downstream:
-    name: Trigger All Downstream Builds
+  trigger-meta-repo:
+    name: Trigger Meta-Repo CI
     runs-on: ubuntu-latest
     if: ${{ github.event.workflow_run.conclusion == 'success' }}
 
     steps:
-      - name: Trigger ploston
-        uses: peter-evans/repository-dispatch@v2
-        with:
-          token: ${{ secrets.META_REPO_TOKEN }}
-          repository: ostanlabs/ploston
-          event-type: core-updated
-          client-payload: |
-            {
-              "core_sha": "${{ github.event.workflow_run.head_sha }}",
-              "core_short_sha": "${{ github.event.workflow_run.head_sha }}",
-              "triggered_by": "ploston-core",
-              "trigger_type": "ci",
-              "run_url": "${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.event.workflow_run.id }}"
-            }
-
-      - name: Trigger ploston-enterprise
-        uses: peter-evans/repository-dispatch@v2
-        with:
-          token: ${{ secrets.META_REPO_TOKEN }}
-          repository: ostanlabs/ploston-enterprise
-          event-type: core-updated
-          client-payload: |
-            {
-              "core_sha": "${{ github.event.workflow_run.head_sha }}",
-              "core_short_sha": "${{ github.event.workflow_run.head_sha }}",
-              "triggered_by": "ploston-core",
-              "trigger_type": "ci",
-              "run_url": "${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.event.workflow_run.id }}"
-            }
-
-      - name: Trigger ploston-cli
-        uses: peter-evans/repository-dispatch@v2
-        with:
-          token: ${{ secrets.META_REPO_TOKEN }}
-          repository: ostanlabs/ploston-cli
-          event-type: core-updated
-          client-payload: |
-            {
-              "core_sha": "${{ github.event.workflow_run.head_sha }}",
-              "core_short_sha": "${{ github.event.workflow_run.head_sha }}",
-              "triggered_by": "ploston-core",
-              "trigger_type": "ci",
-              "run_url": "${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.event.workflow_run.id }}"
-            }
-
-      - name: Trigger ploston-runner
-        uses: peter-evans/repository-dispatch@v2
-        with:
-          token: ${{ secrets.META_REPO_TOKEN }}
-          repository: ostanlabs/ploston-runner
-          event-type: core-updated
-          client-payload: |
-            {
-              "core_sha": "${{ github.event.workflow_run.head_sha }}",
-              "core_short_sha": "${{ github.event.workflow_run.head_sha }}",
-              "triggered_by": "ploston-core",
-              "trigger_type": "ci",
-              "run_url": "${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.event.workflow_run.id }}"
-            }
-
-      - name: Notify meta-repo of cascade start
-        uses: peter-evans/repository-dispatch@v2
+      - name: Trigger meta-repo to rebuild ALL dependents
+        uses: peter-evans/repository-dispatch@v3
         with:
           token: ${{ secrets.META_REPO_TOKEN }}
           repository: ostanlabs/agent-execution-layer
-          event-type: cascade-started
+          event-type: core-updated
           client-payload: |
             {
-              "trigger_source": "ploston-core",
-              "trigger_type": "ci",
-              "core_sha": "${{ github.event.workflow_run.head_sha }}",
-              "expected_builds": ["ploston", "ploston-enterprise", "ploston-cli", "ploston-runner"],
-              "run_url": "${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.event.workflow_run.id }}"
+              "trigger_repo": "ploston-core",
+              "trigger_sha": "${{ github.event.workflow_run.head_sha }}"
             }
 
       - name: Summary
         run: |
-          echo "## Downstream Builds Triggered 🚀" >> $GITHUB_STEP_SUMMARY
+          echo "## Meta-Repo CI Triggered 🚀" >> $GITHUB_STEP_SUMMARY
           echo "" >> $GITHUB_STEP_SUMMARY
-          echo "Triggered all downstream repos to rebuild with:" >> $GITHUB_STEP_SUMMARY
+          echo "Triggered meta-repo to rebuild ALL dependents with:" >> $GITHUB_STEP_SUMMARY
           echo "- **ploston-core SHA:** \`${{ github.event.workflow_run.head_sha }}\`" >> $GITHUB_STEP_SUMMARY
           echo "" >> $GITHUB_STEP_SUMMARY
-          echo "### Triggered Repos:" >> $GITHUB_STEP_SUMMARY
-          echo "1. **ploston** - Build RC image with new ploston-core" >> $GITHUB_STEP_SUMMARY
-          echo "2. **ploston-enterprise** - Build RC image with new ploston-core" >> $GITHUB_STEP_SUMMARY
-          echo "3. **ploston-cli** - Run CI with new ploston-core" >> $GITHUB_STEP_SUMMARY
-          echo "4. **ploston-runner** - Run CI with new ploston-core" >> $GITHUB_STEP_SUMMARY
-          echo "" >> $GITHUB_STEP_SUMMARY
-          echo "### Flow:" >> $GITHUB_STEP_SUMMARY
-          echo "1. All 4 downstream repos run CI in parallel" >> $GITHUB_STEP_SUMMARY
-          echo "2. Each reports status to meta-repo" >> $GITHUB_STEP_SUMMARY
-          echo "3. Meta-repo waits for all 4 to complete" >> $GITHUB_STEP_SUMMARY
-          echo "4. Meta-repo runs integration tests with all artifacts" >> $GITHUB_STEP_SUMMARY
+          echo "### What happens next:" >> $GITHUB_STEP_SUMMARY
+          echo "1. Meta-repo rebuilds: ploston, ploston-enterprise, ploston-cli, ploston-runner" >> $GITHUB_STEP_SUMMARY
+          echo "2. Runs integration tests (Docker Compose + K8s)" >> $GITHUB_STEP_SUMMARY
+          echo "3. Promotes images to :edge on success" >> $GITHUB_STEP_SUMMARY
+          echo "4. Updates dashboard" >> $GITHUB_STEP_SUMMARY
