--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -157,7 +157,7 @@ jobs:
   report-to-dashboard:
     name: Report to Dashboard
     runs-on: ubuntu-latest
-    needs: [unit-tests, integration-tests]
+    needs: [lint, unit-tests, integration-tests]
     if: always() && github.ref == 'refs/heads/main'
     steps:
       - name: Download all test results
@@ -196,6 +196,10 @@ jobs:
           echo "failed=$TOTAL_FAILED" >> $GITHUB_OUTPUT
           echo "skipped=$TOTAL_SKIPPED" >> $GITHUB_OUTPUT
 
+      - name: Get short SHA
+        id: sha
+        run: echo "short=${GITHUB_SHA::7}" >> $GITHUB_OUTPUT
+
       - name: Report to meta-repo dashboard
         uses: peter-evans/repository-dispatch@v2
         with:
@@ -206,16 +210,18 @@ jobs:
             {
               "package": "ploston-core",
               "sha": "${{ github.sha }}",
-              "short_sha": "${{ github.sha }}",
+              "short_sha": "${{ steps.sha.outputs.short }}",
               "run_id": "${{ github.run_id }}",
               "run_url": "${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}",
+              "lint": "${{ needs.lint.result }}",
+              "test": "${{ needs.unit-tests.result == 'success' && needs.integration-tests.result == 'success' && 'success' || 'failure' }}",
               "tests": {
                 "total": ${{ steps.parse.outputs.total }},
                 "passed": ${{ steps.parse.outputs.passed }},
                 "failed": ${{ steps.parse.outputs.failed }},
                 "skipped": ${{ steps.parse.outputs.skipped }}
               },
-              "status": "${{ needs.unit-tests.result == 'success' && needs.integration-tests.result == 'success' && 'success' || 'failure' }}"
+              "status": "${{ needs.lint.result == 'success' && needs.unit-tests.result == 'success' && needs.integration-tests.result == 'success' && 'success' || 'failure' }}"
             }
 
   build:
