--- a/.github/workflows/trigger-downstream.yml
+++ b/.github/workflows/trigger-downstream.yml
@@ -1,18 +1,20 @@
 # =============================================================================
-# Trigger Downstream Builds (Hub-and-Spoke Model)
+# Publish Dev Version & Trigger Downstream Builds
 # =============================================================================
-# When ploston-core CI passes on main, trigger the meta-repo to rebuild ALL
-# dependent packages. The meta-repo handles the full CI pipeline.
+# When ploston-core CI passes on main:
+#   1. Publish a dev version to PyPI (e.g., 1.4.0.dev1707234567)
+#   2. Trigger meta-repo to rebuild ALL dependent packages with this version
 #
 # Flow:
 #   1. Push to ploston-core/main triggers CI
 #   2. CI passes → this workflow runs
-#   3. Triggers meta-repo with core-updated event
-#   4. Meta-repo rebuilds ALL 4 dependents (ploston, enterprise, cli, runner)
-#   5. Meta-repo runs integration tests with all artifacts
+#   3. Publishes dev version to PyPI
+#   4. Triggers meta-repo with core-updated event + dev version
+#   5. Meta-repo rebuilds ALL 4 dependents using the dev version
+#   6. Meta-repo runs integration tests with all artifacts
 # =============================================================================
 
-name: Trigger Downstream
+name: Publish Dev & Trigger Downstream
 
 on:
   workflow_run:
@@ -21,11 +23,56 @@ on:
     branches: [main]
 
 jobs:
+  publish-dev:
+    name: Publish Dev Version to PyPI
+    runs-on: ubuntu-latest
+    if: ${{ github.event.workflow_run.conclusion == 'success' }}
+    environment:
+      name: pypi
+      url: https://pypi.org/p/ploston-core
+    permissions:
+      id-token: write  # OIDC publishing
+    outputs:
+      dev_version: ${{ steps.version.outputs.dev_version }}
+
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          ref: ${{ github.event.workflow_run.head_sha }}
+
+      - name: Install uv
+        uses: astral-sh/setup-uv@v4
+
+      - name: Set up Python
+        run: uv python install 3.12
+
+      - name: Calculate dev version
+        id: version
+        run: |
+          # Get base version from pyproject.toml
+          BASE_VERSION=$(grep '^version = ' pyproject.toml | sed 's/version = "\(.*\)"/\1/')
+          # Create dev version with Unix timestamp
+          TIMESTAMP=$(date +%s)
+          DEV_VERSION="${BASE_VERSION}.dev${TIMESTAMP}"
+          echo "dev_version=$DEV_VERSION" >> $GITHUB_OUTPUT
+          echo "::notice::Dev version: $DEV_VERSION"
+
+      - name: Update version in pyproject.toml
+        run: |
+          sed -i 's/^version = ".*"/version = "${{ steps.version.outputs.dev_version }}"/' pyproject.toml
+          echo "Updated pyproject.toml:"
+          grep '^version = ' pyproject.toml
+
+      - name: Build package
+        run: uv build
+
+      - name: Publish to PyPI
+        uses: pypa/gh-action-pypi-publish@release/v1
+
   trigger-meta-repo:
     name: Trigger Meta-Repo CI
     runs-on: ubuntu-latest
-    if: ${{ github.event.workflow_run.conclusion == 'success' }}
-
+    needs: publish-dev
     steps:
       - name: Trigger meta-repo to rebuild ALL dependents
         uses: peter-evans/repository-dispatch@v3
@@ -36,18 +83,24 @@ jobs:
           client-payload: |
             {
               "trigger_repo": "ploston-core",
-              "trigger_sha": "${{ github.event.workflow_run.head_sha }}"
+              "trigger_sha": "${{ github.event.workflow_run.head_sha }}",
+              "core_dev_version": "${{ needs.publish-dev.outputs.dev_version }}"
             }
 
       - name: Summary
         run: |
-          echo "## Meta-Repo CI Triggered 🚀" >> $GITHUB_STEP_SUMMARY
+          echo "## Dev Version Published & Meta-Repo Triggered 🚀" >> $GITHUB_STEP_SUMMARY
           echo "" >> $GITHUB_STEP_SUMMARY
-          echo "Triggered meta-repo to rebuild ALL dependents with:" >> $GITHUB_STEP_SUMMARY
+          echo "### Published to PyPI:" >> $GITHUB_STEP_SUMMARY
+          echo "- **Version:** \`${{ needs.publish-dev.outputs.dev_version }}\`" >> $GITHUB_STEP_SUMMARY
+          echo "- **PyPI:** https://pypi.org/project/ploston-core/${{ needs.publish-dev.outputs.dev_version }}/" >> $GITHUB_STEP_SUMMARY
+          echo "" >> $GITHUB_STEP_SUMMARY
+          echo "### Triggered meta-repo with:" >> $GITHUB_STEP_SUMMARY
           echo "- **ploston-core SHA:** \`${{ github.event.workflow_run.head_sha }}\`" >> $GITHUB_STEP_SUMMARY
+          echo "- **ploston-core version:** \`${{ needs.publish-dev.outputs.dev_version }}\`" >> $GITHUB_STEP_SUMMARY
           echo "" >> $GITHUB_STEP_SUMMARY
           echo "### What happens next:" >> $GITHUB_STEP_SUMMARY
           echo "1. Meta-repo rebuilds: ploston, ploston-enterprise, ploston-cli, ploston-runner" >> $GITHUB_STEP_SUMMARY
-          echo "2. Runs integration tests (Docker Compose + K8s)" >> $GITHUB_STEP_SUMMARY
-          echo "3. Promotes images to :edge on success" >> $GITHUB_STEP_SUMMARY
-          echo "4. Updates dashboard" >> $GITHUB_STEP_SUMMARY
+          echo "2. All packages will use ploston-core==${{ needs.publish-dev.outputs.dev_version }}" >> $GITHUB_STEP_SUMMARY
+          echo "3. Runs integration tests (Docker Compose + K8s)" >> $GITHUB_STEP_SUMMARY
+          echo "4. Promotes images to :edge on success" >> $GITHUB_STEP_SUMMARY
