fix: don't fail CI if dashboard reporting fails
The report-to-dashboard step was failing due to missing META_REPO_TOKEN,
which caused the entire CI to fail and prevented the downstream trigger
workflow from running.

Adding continue-on-error: true ensures that dashboard reporting failures
don't block the CI from being considered successful, allowing the
trigger-downstream workflow to run and publish dev versions to PyPI.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -202,6 +202,7 @@ jobs:
 
       - name: Report to meta-repo dashboard
         uses: peter-evans/repository-dispatch@v2
+        continue-on-error: true  # Don't fail CI if dashboard reporting fails
         with:
           token: ${{ secrets.META_REPO_TOKEN }}
           repository: ostanlabs/agent-execution-layer
